# chess-engine

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: board.rs  lib.rs  main.rs  move_generation.rs  moves.rs  piece.rs  position.rs
src/attack_pattern/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs  sliding_pieces.rs
src/board/: board.rs  color.rs  mod.rs  piece.rs  piece_variation.rs
src/bot/: calculation_thread.rs  mod.rs
src/bot/evaluation/: eval.rs  mod.rs  piece_square_table.rs
src/bot/search/: diagnostics.rs  limit.rs  min_max.rs  mod.rs  move_ordering.rs  opening_book.rs  pv_line.rs  repetition_history.rs  searcher.rs  transposition_table.rs
src/game/: castle_rights.rs  color.rs  display.rs  mod.rs  move_notation.rs  moves.rs  piece.rs  piece_type.rs  piece_variation.rs  position.rs  square.rs
src/game/bit_manipulation/: constants.rs  mod.rs
src/game/board/: bit_board.rs  board_error.rs  board_state.rs  display.rs  fen_utility.rs  game_result.rs  mod.rs  move_generation.rs  representation.rs  zobrist.rs
src/game/board/evaluation/: mod.rs  piece_square_table.rs
src/game/board/move_gen/: helper.rs  legal_move_list.rs  mod.rs  test.rs
src/game/moves/: base_move.rs  castle_rights.rs  castle_type.rs  detailed_move.rs  mod.rs  move_type.rs  promotion_piece.rs
src/game/parser/: mod.rs  png_parser.rs
src/uci/: commands.rs  handling.rs  mod.rs  uci_input.rs
src/uci/commands/: commands.rs  mod.rs
src/uci/commands/handling/: command_go.rs  command_position.rs  command_set_option.rs  command_uci.rs  mod.rs
(+14 files in other folders)
