[package]
name = "chess-bot"
version = "0.1.0"
edition = "2021"
default-run = "main"
config = "config.toml"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "perft"
path = "src/bin/perft.rs"

[[bin]]
name = "uci"
path = "src/bin/uci.rs"
required-features = ["log_to_file"]

[[bin]]
name = "find_magic"
path = "src/bin/find_magic.rs"

[features]
log_to_file = []
default = []

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
num_enum = "0.5.0"
itertools = "0.13.0"
rand = "0.8.4"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
lazy_static = "1.4"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
